test/Fail/QuoteMustBeAppliedToIdentifier.err
QuoteMustBeAppliedToIdentifier.agda:5.1-11: error: [CannotQuote.Nothing]
'quote' expects an unambiguous defined name, but here the argument
is missing
when scope checking the left-hand side test quote in the definition
of test
